--- a/Server/App.xaml
+++ b/Server/App.xaml
@@ -4,6 +4,13 @@
              xmlns:local="clr-namespace:Server"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Style/ListBox.xaml"/>
+                <ResourceDictionary Source="Style/Button.xaml"/>
+                <ResourceDictionary Source="Style/NovaTextBox.xaml"/>
+                <ResourceDictionary Source="Style/ComboBox.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
