--- a/Server/Pages/Home.xaml
+++ b/Server/Pages/Home.xaml
@@ -1,14 +1,21 @@
-﻿<Page x:Class="Server.Page.Home"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Server.Page"
+      xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Server.Page.Home"
       mc:Ignorable="d" 
-      d:DesignHeight="610" d:DesignWidth="895"
+      d:DesignHeight="693" d:DesignWidth="980"
       Title="Home">
 
     <Grid>
-        <ListBox Margin="19,62,33,435" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+        <ListBox x:Name="Devices" Style="{StaticResource ListBoxStyle}" ScrollViewer.VerticalScrollBarVisibility="Hidden" Margin="22,26,22,465" Background="#19D4D4D4" Foreground="White"/>
+        <TextBox x:Name="CommandTextBox" Style="{StaticResource NovaTextBox}" HorizontalAlignment="Left" Height="34" Margin="230,625,0,0" TextWrapping="Wrap" Text="echo Hello" VerticalAlignment="Top" Width="714" Background="#33EEEEEE" Foreground="White" BorderBrush="#19FFFFFF" Cursor="IBeam" KeyDown="CommandTextBox_KeyDown"/>
+        <TextBox x:Name="Log_"  Style="{StaticResource NovaTextBox}"  HorizontalAlignment="Center" Height="339" Margin="0,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="936" Background="#33EEEEEE" BorderBrush="{x:Null}" Foreground="White"/>
+        <ComboBox x:Name="MsgMode" Style="{StaticResource NovaComboBox}" HorizontalAlignment="Left" Height="34" Margin="35,625,0,0" VerticalAlignment="Top" Width="144" Background="White" SelectedIndex="0" FontSize="16" Foreground="White" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+            <ComboBoxItem Content="Command" />
+            <ComboBoxItem Content="String" />
+        </ComboBox>
     </Grid>
 </Page>
